# BallsOnThreads

./: Ball.cpp  Ball.h  BallHolder.cpp  BallHolder.h  CMakeLists.txt  DirectionGenerator.cpp  DirectionGenerator.h  Line.cpp  Line.h  README.md  main.cpp
